--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,5 @@
 {
-  "NihonUpdated": true,
-  "Version": "5.3.2",
+  "LibraryUpdated": true,
   "DiscordInvite": "discord.gg/8j4PJUDWhE",
+  "InterfaceVersion": "5.3.2",
 }
