--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,6 @@
 {
   "LibraryUpdated": true,
   "Version": "5.3.2",
-  "DiscordServer": "discord.gg/8j4PJUDWhE"
+  "DiscordServer": "discord.gg/8j4PJUDWhE",
+  "DownloadLink": "wearedevs.net/d/Nihon"
 }
