--- a/Config.json
+++ b/Config.json
@@ -1,6 +1,6 @@
 {
   "LibraryUpdated": true,
-  "Version": "5.3.2",
-  "DiscordServer": "discord.gg/8j4PJUDWhE",
   "DownloadLink": "wearedevs.net/d/Nihon"
+  "Version": "5.3.2",
+  "DiscordServer": "discord.gg/8j4PJUDWhE"
 }
