--- a/Config.json
+++ b/Config.json
@@ -2,5 +2,5 @@
   "LibraryUpdated": true,
   "DownloadLink": "wearedevs.net/d/Nihon",
   "Version": "5.3.2",
-  "DiscordServer": "discord.gg/8j4PJUDWhE"
+  "DiscordServer": "discord.gg/8kqAy2BEsZ"
 }
