--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,5 @@
 {
-  "LibraryUpdated": true,
+  "IsUpdated": true,
   "DownloadLink": "wearedevs.net/d/Nihon",
   "Version": "5.3.2",
   "DiscordServer": "discord.gg/8kqAy2BEsZ"
