--- a/Config.json
+++ b/Config.json
@@ -2,5 +2,5 @@
   "IsUpdated": true,
   "DownloadLink": "wearedevs.net/d/Nihon",
   "Version": "5.3.3",
-  "DiscordServer": "discord.gg/8kqAy2BEsZ"
+  "DiscordServer": "https://discord.gg/aUEq6QJRMW"
 }
