--- a/Config.json
+++ b/Config.json
@@ -1,6 +1,6 @@
 {
-  "IsUpdated": true,
   "DownloadLink": "wearedevs.net/d/Nihon",
   "Version": "5.3.3",
-  "DiscordServer": "discord.gg/aUEq6QJRMW"
+  "DiscordServer": "discord.gg/aUEq6QJRMW",
+  "Updated": true
 }
