--- a/Config.json
+++ b/Config.json
@@ -1,6 +1,5 @@
 {
   "DownloadLink": "wearedevs.net/d/Nihon",
   "Version": "5.3.3",
-  "DiscordServer": "discord.gg/aUEq6QJRMW",
-  "Updated": true
+  "DiscordServer": "https://nihontechnology.xyz/discord",
 }
